--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@appveen/ds-sdk": "^1.0.0-beta.1",
+    "@appveen/data.stack-utils": "^1.0.17",
+    "@appveen/ds-sdk": "^1.0.0",
     "@appveen/utils": "1.2.6",
     "async": "^3.2.0",
     "express": "^4.17.1",
