--- a/package.json
+++ b/package.json
@@ -10,33 +10,32 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@appveen/data.stack-utils": "^1.0.17",
-    "@appveen/ds-sdk": "^1.0.8",
-    "@appveen/utils": "1.2.6",
-    "async": "^3.2.0",
-    "express": "^4.17.1",
-    "express-fileupload": "^1.1.7-alpha.4",
-    "faker": "5.5.2",
+    "@appveen/data.stack-utils": "^1.0.19",
+    "@appveen/ds-sdk": "^2.1.1",
+    "@appveen/utils": "2.1.4",
+    "async": "^3.2.3",
+    "express": "^4.17.3",
+    "express-fileupload": "^1.3.1",
     "fast-csv": "^4.3.1",
-    "fast-xml-parser": "^3.17.4",
-    "got": "11.8.2",
+    "fast-xml-parser": "^4.0.7",
+    "got": "12.0.3",
     "lodash": "4.17.21",
-    "log4js": "6.3.0",
-    "moment": "2.29.1",
-    "mongodb": "^3.5.9",
-    "mongoose": "^5.10.5",
-    "node-schedule": "^1.3.2",
+    "log4js": "6.4.4",
+    "moment": "2.29.2",
+    "mongodb": "^4.5.0",
+    "mongoose": "^6.2.10",
+    "node-schedule": "^2.1.0",
     "request": "^2.88.2",
     "uuid": "8.3.2",
-    "validator": "13.5.2",
-    "xlsx": "^0.16.5",
+    "validator": "13.7.0",
+    "xlsx": "^0.18.5",
     "xlsx-populate": "^1.21.0"
   },
   "devDependencies": {
-    "dotenv": "^8.2.0",
-    "inquirer": "^7.3.3",
-    "nodemon": "^2.0.4",
-    "recursive-copy": "^2.0.10"
+    "dotenv": "^16.0.0",
+    "inquirer": "^8.2.2",
+    "nodemon": "^2.0.15",
+    "recursive-copy": "^2.0.14"
   },
   "repository": {
     "type": "git",
