--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "2.1.0",
   "main": "index.js",
   "scripts": {
-    "start": "node generator/test.js",
+    "start": "node app.js",
     "test": "node generator/test.js"
   },
   "keywords": [],
