--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@appveen/data.stack-utils": "^1.0.19",
     "@appveen/ds-sdk": "^2.3.0",
-    "@appveen/utils": "2.1.6",
+    "@appveen/utils": "2.1.7",
     "async": "^3.2.3",
     "express": "^4.18.1",
     "express-fileupload": "^1.4.0",
@@ -20,7 +20,7 @@
     "fast-xml-parser": "^4.0.7",
     "got": "^11.8.2",
     "lodash": "4.17.21",
-    "log4js": "6.4.4",
+    "log4js": "^6.5.2",
     "moment": "2.29.2",
     "mongodb": "^4.5.0",
     "mongoose": "^6.3.3",
