--- a/.dockerignore
+++ b/.dockerignore
@@ -1,8 +1,16 @@
 node_modules
+.vscode
+.idea
+.eslintrc.yml
+.gitignore
+.dockerignore
+.huskyrc
+.git
 npm-debug.log
 Dockerfile
-.dockerignore
-faas
-schemas
-generatedFaas
+VERSION
+LICENSE
+README.md
 build.sh
+build
+.env
