--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "fast-csv": "^4.3.6",
     "fast-xml-parser": "^4.2.6",
     "got": "^11.8.6",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "4.17.21",
     "log4js": "^6.9.1",
     "moment": "2.29.4",
