--- a/faas.yaml
+++ b/faas.yaml
@@ -7,7 +7,6 @@ spec:
   type: ClusterIP
   selector:
     app: faas
-    release: __release_tag__
   ports:
     - protocol: TCP
       port: 80
@@ -23,16 +22,14 @@ spec:
   selector:
     matchLabels:
       app: faas
-      release: __release_tag__
   template:
     metadata:
       labels:
         app: faas
-        release: __release_tag__
     spec:
       containers:
         - name: faas
-          image: '__docker_registry_server__/data.stack:faas.__release__'
+          image: '__docker_registry_server__/datanimbus.io.faas:__release__'
           ports:
             - containerPort: 31000
           startupProbe:
